# my_latest_portfolio

./: Dockerfile  Procfile  app.py  data.json  db.sqlite3  gunicorn.conf.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
main/: forms.py
main/migrations/: 0005_remove_certificate_image.py
main/templates/main/: index.html  portfolio-detail.html
main/templates/main/partials/: nav.html
my_resume/: db.sqlite3  netlify.toml  settings.py  wsgi.py
my_resume/staticfiles/css/: style.css
