[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-1-portfolio"
version = "0.1.0"
description = "This is a portfolio to showcase my projects, The portfolio was created using python, Javascript & Django frameworks"
authors = ["samukele <samukele107@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2.4"
# Add other dependencies as needed
dj_database_url = "*"

[tool.poetry.dev-dependencies]
# Add development dependencies if required
allow-unsafe = true
ansiwrap = {version = "0.8.4", hashes = ["sha256:7b053567c88e1ad9eed030d3ac41b722125e4c1271c8a99ade797faff1f49fb1"]}


[build-system.heroku]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

ansiwrap = {version = "0.8.4", hashes = ["sha256:7b053567c88e1ad9eed030d3ac41b722125e4c1271c8a99ade797faff1f49fb1"]}

